# akita-inu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/core/: ASHE.cpp  ASHE.h  CMakeLists.txt  DEPIR.cpp  DEPIR.h  big_int.h  common.h  fast_evaluation.cpp  fast_evaluation.h  interpolation.cpp  interpolation.h  kissfft.hpp  modular_arithmetic.hpp  ring_polynomial.hpp
src/tests/: ASHE.cpp  CMakeLists.txt  DEPIR.cpp  big_int.cpp  fast_evaluation.cpp  interpolation.cpp  modular_arithmetic.cpp  ring_polynomial.cpp
